Hide IME panel when H/W keyboard is connecting
Change-Id: I155565500469b2ea35212482e146c377e993691e

--- a/configure.ac
+++ b/configure.ac
@@ -36,9 +36,13 @@ fi
 PKG_CHECK_MODULES(WAYLAND_SCANNER, wayland-scanner)
 PKG_CHECK_MODULES(WAYLAND, [wayland-server])
 PKG_CHECK_MODULES(ENLIGHTENMENT, [enlightenment])
+PKG_CHECK_MODULES(EEZE, [eeze])
 
 AC_SUBST(ENLIGHTENMENT_CFLAGS)
 AC_SUBST(ENLIGHTENMENT_LIBS)
+
+AC_SUBST(EEZE_CFLAGS)
+AC_SUBST(EEZE_LIBS)
 
 AC_CHECK_LIB(dl, dlopen, dlopen_libs=-ldl)
 AC_SUBST(dlopen_libs)
