using tizen-extension wayland protocol instead of including *protocol.c directly
Change-Id: I36c084d3a92053d972f937713d49ec2c94b31c24

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,23 +7,8 @@ filesdir = $(libdir)/enlightenment/modules/$(MODULE)
 pkgdir                 = $(libdir)/enlightenment/modules/$(MODULE)/$(MODULE_ARCH)
 pkg_LTLIBRARIES        = module.la
 module_la_SOURCES      = e_mod_main.c \
-                         e_mod_input_panel.c \
-                         input-method-protocol.c \
-                         text-protocol.c
+                         e_mod_input_panel.c
 module_la_LIBADD       =
 module_la_CFLAGS       = @WAYLAND_CFLAGS@ @ENLIGHTENMENT_CFLAGS@ @EEZE_CFLAGS@ -DHAVE_WAYLAND_ONLY
 module_la_LDFLAGS      = -module -avoid-version @WAYLAND_LIBS@ @ENLIGHTENMENT_LIBS@ @EEZE_LIBS@
 module_la_DEPENDENCIES = $(top_builddir)/config.h
-
-BUILT_SOURCES = input-method-protocol.c \
-                input-method-protocol.h \
-                text-protocol.c \
-                text-protocol.h
-
-CLEANFILES = $(BUILT_SOURCES)
-
-%-protocol.c : $(top_srcdir)/protocol/%.xml
-	$(AM_V_GEN)$(MKDIR_P) $(dir $@) && $(wayland_scanner) code < $< > $@
-
-%-protocol.h : $(top_srcdir)/protocol/%.xml
-	$(AM_V_GEN)$(MKDIR_P) $(dir $@) && $(wayland_scanner) server-header < $< > $@
