Support to switch between H/W and S/W keyboard mode
Change-Id: Iebfd0a1c2918267f23fe49534586cc08662cb48e

--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ AC_PROG_LIBTOOL
 PKG_CHECK_MODULES(WAYLAND, [wayland-server, text-server, input-method-server])
 PKG_CHECK_MODULES(ENLIGHTENMENT, [enlightenment])
 PKG_CHECK_MODULES(EEZE, [eeze])
+PKG_CHECK_MODULES(VCONF, [vconf])
 
 AC_SUBST(ENLIGHTENMENT_CFLAGS)
 AC_SUBST(ENLIGHTENMENT_LIBS)
